--- a/frontend/src/components/NavBar/Navbar.module.css
+++ b/frontend/src/components/NavBar/Navbar.module.css
@@ -4,6 +4,7 @@
   box-shadow: 0 2px 4px 0 rgba(0,0,0,.25);
   display: flex;
   flex-direction: column;
+  grid-row: 1;
   height: 7rem;
   justify-content: space-between;
   margin: 0;
