--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,10 @@ body {
   font-size: 13px;
   margin: 0;
   padding: 0;
+  --primaryColor: #000;
+  --tertiaryColor: #5b636a;
+  --positiveColor: #00873c;
+  --negativeColor: #eb0f29;
 }
 
 body * {
